solutions/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-backend
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-world-kubernetes
      stage: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: hello-world-kubernetes-backend
      labels:
        app: hello-world-kubernetes
        stage: backend
    spec:
      containers:
      - name: frontend
        image: docker.pkg.github.com/mm53/hello-world-kubernetes/backend:latest
        ports:
        - containerPort: 8080
