solutions/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-frontend
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-world-kubernetes
      stage: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: hello-world-kubernetes-frontend
      labels:
        app: hello-world-kubernetes
        stage: frontend
    spec:
      containers:
        - name: frontend
          image: docker.pkg.github.com/mm53/hello-world-kubernetes/frontend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: templates
              mountPath: /var/www/templates/additional
      volumes:
        - name: templates
          configMap:
            name: hello-world-with-backend
