solutions/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-backend
spec:
  selector:
    app: hello-world-kubernetes
    stage: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
