solutions/ingress-combined.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello
          backend:
            serviceName: hello-world-backend
            servicePort: 80
      - path: /
          backend:
            serviceName: hello-world
            servicePort: 80
